chore(UI): Fix ML Kit UI on iOS. And Button alignment on home page.

--- a/demo-ng/app/app.css
+++ b/demo-ng/app/app.css
@@ -29,7 +29,7 @@ label {
 
 button {
   background-color: #6494AA;
-  padding: 8 10;
+  padding: 6 8;
   margin: 4 8;
   font-size: 13;
   border-radius: 4;
